k8s/service.yaml
#service for argo rollout
apiVersion: v1
kind: Service
metadata:
  name: bankapp-active 
  namespace: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankapp
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-preview 
  namespace: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankapp
