k8s/ingress.yaml
#ingress for blue green deployment
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankapp-ingress
  namespace: prod
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: worths.cloud
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: bankapp-active
            port:
              number: 80
  tls:
  - hosts:
    - worths.cloud
    - worths.publicvm.com
    secretName: bankapp-tls
